--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <script type="module" src="./functions/entry.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <link rel="icon" href="./favicon.png" type="image/png" />
   </head>
   <body>
     <header>
